# tttz

./: .gitignore  .gitmodules  Cargo.toml  README.md  README.txt  TODO.md  TODO.txt  ai_vs.sh  quick_play_ai.sh  quick_single.sh  quick_watch_ai.sh
doc/: rule.md  why_no_soft_drop.md
mpboard/: Cargo.toml
mpboard/src/: block.rs  board.rs  display.rs  lib.rs  random_generator.rs  srs_data.rs
resources/se/: generate_sound.sh
script/: botbattle1.sh  botbattle2.sh  mmbot_build.sh  overwrite_install.sh  quick_play_ai.sh  quick_play_ai2.sh  quick_single.sh  quick_test_mcts.sh  quick_watch_ai.sh  quick_watch_ai2.sh  replay_latest.sh
src/: block.rs  board.rs  client.rs  client_manager.rs  control_client.rs  display_client.rs  main.rs  random_generator.rs  server.rs  srs_data.rs
src/ai/: Cargo.toml  README.md  build.rs  dummy.rs  vanilla.rs
src/ai/src/: ai.rs  ai1.rs  ai_utils.rs  basic_ai.rs  ccbot.rs  lib.rs  mmbot.rs  sb_ai.rs  sbai.rs  stupid_mcts.rs
src/aibench/: Cargo.toml
src/aibench/src/: main.rs
src/client/: Cargo.toml
src/client/src/: ai1.rs  client.rs  client_display.rs  client_session.rs  client_socket.rs
src/client/src/ai/: vanilla.rs
src/deb/: Cargo.toml
src/deb/src/: main.rs
src/libai/: Cargo.toml
src/libai/examples/: find_pc.rs
src/libai/src/: access_floodfill.rs  evaluate.rs  evaluation.rs  evaluator.rs  lib.rs  mcts.rs  mcts_stupid.rs  pcsolver.rs  thinker.rs  utils.rs
src/libclient/: Cargo.toml
src/libclient/src/: client_display.rs  client_socket.rs  lib.rs  sound_effect.rs  sound_manager.rs
src/mpboard/: Cargo.toml  README.txt
src/mpboard/src/: block.rs  board.rs  display.rs  field.rs  game.rs  garbage_attack_manager.rs  lib.rs  random_generator.rs  replay.rs  srs_data.rs  test.rs  utils.rs
src/protocol/: Cargo.toml
src/protocol/src/: ai_type.rs  board_msg.rs  client_msg.rs  display.rs  game_type.rs  key_type.rs  lib.rs  msg_encoding.rs  piece.rs  server_msg.rs  sound_effect.rs
src/replayer/: Cargo.toml  README.md
src/replayer/src/: main.rs  replay_counter.rs  replay_simulator.rs
src/rlif/: Cargo.toml  README.md
src/rlif/src/: main.rs
src/ruleset/: Cargo.toml
src/ruleset/doc/: rule.md  why_no_soft_drop.md
src/ruleset/src/: attack.rs  basic.rs  lib.rs  srs.rs  srs_data.rs
src/segen/: Cargo.toml
src/segen/src/: lib.rs  main.rs
src/server/: Cargo.toml
src/server/src/: client.rs  client_manager.rs  main.rs  server.rs
src/tui/: Cargo.toml  build.rs
src/tui/src/: client.rs  client_display.rs  client_renderer.rs  client_session.rs  keymap.rs  main.rs  sound_effect.rs  sound_manager.rs
src/tui/src/se/: generate_sound.sh
