[package]
name = "mypuzzle"
version = "0.1.0"
authors = ["asrcpq <asrcpq@outlook.com>"]
edition = "2018"

[[bin]]
name = "mypuzzle-server"
path = "src/server.rs"

[[bin]]
name = "mypuzzle-cc"
path = "src/control_client.rs"

[[bin]]
name = "mypuzzle-dc"
path = "src/display_client.rs"

[dependencies]
lazy_static="*"
termion="*"
rand="*"
mpboard={path = "./mpboard"}

[workspace]
members = [
	"mpboard",
]
