[package]
name = "tttz-ai"
version = "0.2.0"
authors = ["asrcpq <asrcpq@outlook.com>"]
edition = "2018"

[dependencies]
tttz-libclient = { path = "../libclient" }
tttz-mpboard = { path = "../mpboard" }
tttz-protocol = { path = "../protocol" }
tttz-ruleset = { path = "../ruleset" }
tttz-libai = { path = "../libai" }

serde_json = "*"
