[package]
name = "mypuzzle-client"
version = "0.1.0"
authors = ["asrcpq <asrcpq@outlook.com>"]
edition = "2018"

[[bin]]
name = "mypuzzle-client"
path = "src/client.rs"

[dependencies]
termion = "*"
bincode = "*"

[dependencies.mypuzzle-mpboard]
path = "../mpboard"

[dependencies.mypuzzle-libclient]
path = "../libclient"
