[package]
name = "tttz-client"
version = "0.2.0"
authors = ["asrcpq <asrcpq@outlook.com>"]
edition = "2018"

[[bin]]
name = "tttz-client"
path = "src/client.rs"

[dependencies]
termion = "*"
bincode = "*"
lazy_static = "*"

[dependencies.tttz-mpboard]
path = "../mpboard"

[dependencies.tttz-libclient]
path = "../libclient"

[dependencies.tttz-protocol]
path = "../protocol"
