[package]
name = "tttz-client"
version = "0.2.0"
authors = ["asrcpq <asrcpq@outlook.com>"]
edition = "2018"

[[bin]]
name = "tttz-client"
path = "src/client.rs"

[dependencies]
termion = "*"
lazy_static = "*"

[dependencies.tttz-libclient]
path = "../libclient"

[dependencies.tttz-protocol]
path = "../protocol"
