[package]
name = "tttz-mpboard"
version = "0.3.0"
authors = ["asrcpq <asrcpq@outlook.com>"]
edition = "2018"

[dependencies]
rand = {version = "0.8.5", features = ["small_rng"]}
bincode = "*"
directories = "*"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tttz-protocol]
path = "../protocol"

[dependencies.tttz-ruleset]
path = "../ruleset"
