[package]
name = "tttz-server"
version = "0.2.0"
authors = ["asrcpq <asrcpq@outlook.com>"]
edition = "2018"

[dependencies]
bincode = "*"
bimap = "*"
lazy_static = "*"

[dependencies.tttz-mpboard]
path = "../mpboard"

[dependencies.tttz-ai]
path = "../ai"

[dependencies.tttz-protocol]
path = "../protocol"
