[package]
name = "tttz-tui"
version = "0.2.0"
authors = ["asrcpq <asrcpq@outlook.com>"]
edition = "2018"

[features]
nosound = []

[dependencies]
termion = "*"
lazy_static = "*"
rodio = "*"

[dependencies.tttz-libclient]
path = "../libclient"

[dependencies.tttz-protocol]
path = "../protocol"

[dependencies.tttz-mpboard]
path = "../mpboard"
