[package]
name = "tttz-tui"
version = "0.3.0"
authors = ["asrcpq <asrcpq@outlook.com>"]
edition = "2018"
build = "build.rs"

[features]
nosound = []

[build-dependencies.tttz-segen]
path = "../segen"

[dependencies]
termion = "*"
rodio = "*"

[dependencies.tttz-libclient]
path = "../libclient"

[dependencies.tttz-protocol]
path = "../protocol"

[dependencies.tttz-mpboard]
path = "../mpboard"

[dependencies.tttz-ruleset]
path = "../ruleset"
