[package]
name = "tttz-tui"
version = "0.3.0"
authors = ["asrcpq <asrcpq@outlook.com>"]
edition = "2018"

[dependencies]
termion = "*"

[dependencies.tttz-libclient]
path = "../libclient"

[dependencies.tttz-protocol]
path = "../protocol"

[dependencies.tttz-mpboard]
path = "../mpboard"

[dependencies.tttz-ruleset]
path = "../ruleset"
